# GameService

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  clippy.toml  default.nix
API/: BlackJack.md  CoinToss.md  SlotMachine.md
benches/: benchmarks.rs
migrations/2017-09-12-095316_create_blackjack/: down.sql  up.sql
migrations/2018-02-28-195056_RPG/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  test.rs  tests.rs  utils.rs
src/api/: coin_toss.rs  mod.rs  slot_machine.rs
src/api/blackjack/: blackjack.rs  blackjack_game.rs  cards.rs  deck.rs  deck_of_cards.rs  hand.rs  mod.rs  response.rs  session.rs  tests.rs
src/api/coin_toss/: coin.rs  mod.rs
src/api/endpoints/: blackjack.rs  blackjack_route.rs  coin_toss.rs  mod.rs  slot_machine.rs
src/api/rps/: mod.rs  response.rs  rps.rs  rps_game.rs  weapons.rs
src/api/slot_machine/: mod.rs  slot_machine.rs  tests.rs
src/games/: cards.rs  coin_toss.rs  deck.rs  deck_of_cards.rs  mod.rs
src/games/blackjack/: blackjack_game.rs  cards.rs  hand.rs  handler.rs  instance.rs  mod.rs  response.rs  routes.rs
src/games/gofish/: errors.rs  game.rs  hand.rs  mod.rs
src/games/rpg/: dungeon.rs  enchant.rs  errors.rs  game.rs  gear.rs  mod.rs  monster.rs  player.rs  shop.rs
src/games/rpg/gear/: gear_items.rs  items.rs  mod.rs  traits.rs
src/games/rps/: mod.rs  response.rs  rps_game.rs  weapons.rs
tests/: base_cards.rs  blackjack.rs  weapons.rs
