[package]
authors = ["Fuzen-py <fuzen@protonmail.com>"]
name = "games-microservice"
version = "0.5.2"

[[bin]]
name = "game-service"
path = "bin/main.rs"
required-features = [
    "web",
    "auto_save",
]

[dependencies]
cfg-if = "0.1.4"
cute = "0.3.0"
dotenv = "0.13.0"
lazy_static = "1.0.2"
log = "0.4.3"
rand = "0.5.4"
regex = "1.0.2"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
failure = "0.1.1"
failure_derive = "0.1.1"
ron = "0.3.0"

[dependencies.fuzen_macros]
git = "https://github.com/Fuzen-py/RustMacros"

[dependencies.diesel]
features = ["postgres"]
optional = true
version = "1.3.2"

[dependencies.diesel_migrations]
features = ["postgres"]
optional = true
version = "1.3.0"

[dependencies.r2d2]
optional = true
version = "0.8.2"

[dependencies.r2d2-diesel]
optional = true
version = "1.0.0"

[dependencies.rocket]
optional = true
version = "0.3.15"

[dependencies.rocket_codegen]
optional = true
version = "0.3.15"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
optional = true
version = "0.3.15"

[features]
auto_save = [
    "r2d2",
    "r2d2-diesel",
    "diesel",
    "diesel_migrations",
]
default = [
    "web",
    "auto_save",
]
web = [
    "rocket",
    "rocket_codegen",
    "rocket_contrib",
]

[dev-dependencies]
